--- a/assets/style.css
+++ b/assets/style.css
@@ -10,9 +10,16 @@ footer{
     background-color: yellow;
 }
 
-h1 ,
+h1 {
+    text-align: center;
+    color: blue;
+    font-size: 50px;
+   }
+
 h2{
     text-align: center;
+    font-size: 40px;
+    color: darkmagenta;
 }
 
 img{
@@ -38,12 +45,7 @@ p{
    font-size: 30px;
 }
 
-h2{
-   font-size: 40px;
-}
 
-h1 {
- color: blue;
- font-size: 50px;
-}
+
+
 
